classDiagram
    class Owner {
        +str name
        +int available_time
        +list~Pet~ pets
        +add_pet(pet)
        +remove_pet(name)
        +get_pet(name)
    }

    class Pet {
        +str name
        +int age
        +str species
        +list~Task~ tasks
        +add_task(task)
        +remove_task(name)
        +get_tasks()
        +complete_task(name, on_date)
    }

    class Task {
        +str name
        +int duration
        +str priority
        +str category
        +str|None start_time
        +bool completed
        +str|None recurrence
        +date|None due_date
        +mark_complete() Task|None
    }

    class Schedule {
        +date date
        +Pet pet
        +int available_time
        +list~Task~ tasks
        +generate_plan()
        +display_plan()
    }

    class Helpers {
        <<module>>
        sort_tasks_by_time(tasks) list~Task~
        filter_tasks(schedules, completed, pet_name) list~Task~
        detect_conflicts(schedules) list~str~
        build_owner_schedules(owner, date) list~Schedule~
    }

    Owner "1" --> "many" Pet : owns
    Pet "1" --> "many" Task : has
    Schedule "1" --> "1" Pet : plans for
    Schedule "1" --> "many" Task : contains
    Task --> Task : mark_complete() creates
    Helpers ..> Schedule : uses
    Helpers ..> Task : uses
